--- a/index.html
+++ b/index.html
@@ -1,70 +1,153 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>School website-1</title>
-    <link rel="stylesheet" href="style.css">
-    <script src=""></script>
+    <title>Photo Gallery</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
-    <nav class="navbar-inverse my_nav_bar">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#my_navbar">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Maus Middle School</a>
-        </div>
-        <div class="collapse navbar-collapse" id="my_navbar">
-            <ul class="nav navbar-nav">
-                <li><a href="#">Campus Life</a></li>
-                <li><a href="#">Achievements</a></li>
-                <li><a href="#">What's New</a></li>
-                <li><a href="#">Alumni</a></li>
-                <li><a href="#ContactUs">Contact Us</a></li>
+    <h3>
+
+
+        <center>
+            <ul class="menu1">
+                <li class="links"><a href="#home">Home</a></li>
+                <li class="links"><a href="#Grids">Grid view</a></li>
+                <li class="links"><a href="#Slides">Slide view</a></li>
+
+
             </ul>
-        </div>
-    </nav>
+        </center>
+    </h3>
+
+
     <div class="container">
-        <div class="announcement">
-            <marquee  id="marqueestyle" onmouseover="this.stop();" onmouseout="this.start();">
-                ***The Maus family mission is to create future success by instilling PRIDE and embracing diversity to promote the love of learning!
-                 ***
- 
-            </marquee>
-        </div>
-        <center><iframe width="853" height="480" src="https://www.youtube.com/embed/fVR5o2gk1-w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
-        <div class="page-header col-lg-12 col-md-12 col-sm-12 col-xs-12" id="ContactUs">
-            <h2 class="text-capitalize text-left">Contact Us</h2>
-        </div>
-        <div id="map" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3339.3784813160273!2d-96.7715736853249!3d33.17794007074262!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864c3e12e90c37db%3A0x2bcc49acfcf8463!2sLibby%20Cash%20Maus%20Middle%20School!5e0!3m2!1sen!2sus!4v1638035251486!5m2!1sen!2sus" width="400" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        </div>
-        <div id="Details">
-            <img src="powellch.jpg" class="img-responsive img-circle col-lg-3 col-md-3 col-sm-3 col-xs-4">
-            <h3>Principal name: </h3>
-            <h4>Chakosha Powell</h4>
-            <div class="contact_1">
-                <a href="mailto:chennaipublicschool@gmail.com?Subject=Hi">
-                    <h5><i class="fa fa-envelope"></i>&nbsp;&nbsp;powellch@friscoisd.org</h5>
+        <section id="home">
+            <div class="page-header">
+                <h2 class="text-capitalize"></h2>
+                <img id="img1" src="flowers.gif" class="img-responsive">
+            </div>
+        </section>
+        <!---->
+        <hr style="width: 100%;">
+        <section id="Grids">
+            <h2> Grid gallery</h2>
+            <br>
+            <script src=""></script>
+            <div class="row">
+                <img class="img2" src="blue.jpg">
+                <img class="img2" src="Orange.png">
+                <img class="img2" src="Pink tulip.jpg">
+                <img class="img2" src="purple.jpg">
+                <br><br>
+            </div>
+            <div class="row">
+                <img class="img2" src="Red rose.jpg">
+                <img class="img2" src="violet.jpg">
+                <img class="img2" src="White.jpg">
+                <img class="img2" src="yellow.jpg">
+            </div>
+
+        </section>
+
+        <br>
+        <br>
+        <hr style="width: 100%;">
+
+
+        <!-- Left and right controls -->
+        <section id="Slides">
+            <h2>Sliding gallery</h2>
+            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner">
+
+                    <div class="item">
+                        <img class="img-responsive" src="blue.jpg" alt="Blue" style="width:100%;">
+                        <div class="carousel-caption">
+                            <h3>Blue Flower</h3>
+                            <p></p>
+                        </div>
+                    </div>
+
+                    <div class="item active">
+                        <img class="img-responsive" src="Orange.png" alt="Orange" style="width:100%;">
+                        <div class="carousel-caption">
+                            <h3>Orange Flower</h3>
+                            <p></p>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <img class="img-responsive" src="Pink tulip.jpg" alt="Pink" style="width:100%;">
+                        <div class="carousel-caption">
+                            <h3>Pink Tulip</h3>
+                            <p></p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img class="img-responsive" src="purple.jpg" alt="Purple" style="width:100%;">
+                        <div class="carousel-caption">
+                            <h3>Purple Flower</h3>
+                            <p></p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img class="img-responsive" src="Red rose.jpg" alt="Red" style="width:100%;">
+                        <div class="carousel-caption">
+                            <h3>Red Rose</h3>
+                            <p></p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img class="img-responsive" src="violet.jpg" alt="Violet" style="width:100%;">
+                        <div class="carousel-caption">
+                            <h3>Violet Flower</h3>
+                            <p></p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img class="img-responsive" src="White.jpg" alt="White" style="width:100%;">
+                        <div class="carousel-caption">
+                            <h3>White Flower</h3>
+                            <p></p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img class="img-responsive" src="yellow.jpg" alt="Yellow" style="width:100%;">
+                        <div class="carousel-caption">
+                            <h3>Yellow Flower</h3>
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+
+                <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                    <span class="sr-only">Previous</span>
                 </a>
-                <a href="#">
-                    <h5><i class="fa fa-facebook"></i>&nbsp;&nbsp;mausmiddleschool</h5>
-                </a>
-                <a href="#">
-                    <h5><i class="fa fa-phone-square"></i>&nbsp;&nbsp;1234567890</h5>
+                <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right"></span>
+                    <span class="sr-only">Next</span>
                 </a>
             </div>
-        </div>
+        </section>
     </div>
+
+
+
 </body>
 
 </html>
